--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.2",
     "redux": "^4.1.2",
     "web-vitals": "^1.1.2"
   },
@@ -90,9 +91,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "peerDependencies": {
-    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "autoprefixer": "^9.8.8",
